[package]
name = "gba-emulator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
